--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ thiserror = "1.0.63"
 bindgen = "0.69.4"
 
 [dev-dependencies]
+kiss3d = "0.35.0"
+nalgebra = {version = "0.30.0"}
 opencv = {version = "0.92.1", features = ["clang-runtime"]}
