--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ thiserror = "1.0.63"
 bindgen = "0.69.4"
 
 [dev-dependencies]
+bincode = "1.3.3"
 kiss3d = "0.35.0"
 nalgebra = {version = "0.30.0"}
 opencv = {version = "0.92.1", features = ["clang-runtime"]}
+serde = { version = "1.0.204", features = ["derive"] }
